# leveldb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle.kts  consumer-rules.pro
jni/: CMakeLists.txt  db_jni.cpp
src/main/: AndroidManifest.xml
src/main/java/me/vkryl/leveldb/: LevelDB.java  NativeBridge.java
